# app/Dtos/Register/OutputUserDTO.php
@@ -1,0 +1,52 @@
+<?php
+
+namespace App\Dtos\Register;
+
+use App\Dtos\AbstractDTO;
+use App\Dtos\InterfaceDTO;
+use Illuminate\Contracts\Validation\Validator;
+
+/**
+ * @OA\Schema(
+ *     schema="OutputRegisterDTO",
+ *     type="object",
+ *
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="device_name", type="string", example="Dispositivo 1"),
+ *     @OA\Property(property="email", type="integer", example="email@email.com"),
+ *     @OA\Property(property="erro", type="boolean", example=false),
+ *     @OA\Property(property="message", type="string", example=null),
+ * )
+ */
+class OutputUserDTO extends AbstractDTO implements InterfaceDTO
+{
+    public function __construct(
+        public readonly ?int $id = null,
+        public readonly ?string $device_name = null,
+        public readonly ?string $email = null,
+        public readonly ?bool $erro = false,
+        public readonly ?string $message = null,
+    ) {
+        $this->validate();
+    }
+
+    public function rules(): array
+    {
+        return [];
+    }
+
+    public function messages(): array
+    {
+        return [];
+    }
+
+    public function validator(): Validator
+    {
+        return validator($this->toArray(), $this->rules(), $this->messages());
+    }
+
+    public function validate(): array
+    {
+        return $this->validator()->validate();
+    }
+}
