# app/Models/User.php
@@ -21,7 +21,7 @@ class User extends Authenticatable
     }
 
     protected $fillable = [
-        'name',
+        'device_name',
         'email',
         'password',
     ];
